fix bg color,  darkmode anchor gap and size

--- a/styles/style.css
+++ b/styles/style.css
@@ -20,7 +20,7 @@ body {
     box-sizing: border-box;
     background-color: var(--cor-primaria);
     background-image: url("../assets/codigos1.png");
-    background-blend-mode:soft-light;
+    background-blend-mode:color;
 }
 
 body.light-mode {
@@ -49,7 +49,7 @@ body.dark-mode {
 }
 .cabecalho__menu{
     display: flex;
-    gap: 80px;
+    gap: 15px;
 }
 .cabecalho__menu__link{
     font-family: var(--fonte-secundaria);
@@ -143,6 +143,7 @@ body.dark-mode {
     gap: 8px;
     border: 2px solid var(--cor-terciaria);
     width: 6%;
+    padding: 10px;
     border-radius: 16px;
 }
 #dark-mode-button:hover,.cabecalho__menu__link:hover {
